@@ -2,9 +2,8 @@
 
 language: python
 python:
-  - "2.6"
-  - "2.7"
-  - "3.3"
+  - "3.6"
+  - "3.7"
 install:
   - python setup.py develop
   - '[ "$USE_LXML" = "yes" ] && pip install --use-mirrors lxml; :'
