@@ -31,11 +31,9 @@ setup(
             Intended Audience :: Developers
             License :: OSI Approved :: MIT License
             Operating System :: OS Independent
-            Programming Language :: Python :: 2
-            Programming Language :: Python :: 2.6
-            Programming Language :: Python :: 2.7
             Programming Language :: Python :: 3
-            Programming Language :: Python :: 3.3
+            Programming Language :: Python :: 3.6
+            Programming Language :: Python :: 3.7
             Topic :: Games/Entertainment
         """.splitlines() if x.strip()],
     install_requires=[
