@@ -1,12 +1,12 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py26,py27,py33
+envlist = py36,py37
 
 [testenv]
 commands =
     python setup.py develop
-    pip install pytest pytest-cov
-    py.test
+    pip install pytest pytest-cov formencode
+    python -m pytest
 
 [pytest]
 addopts = --cov-report term-missing --cov tmxlib
