@@ -7,6 +7,8 @@ Legend:
 
 0.3 [unreleased]
     ** Images no longer support pixel assignment or the set_pixel method.
+    ** Python 2 is no longer supported.
+    ** Supported Python versions are 3.6+. Tests run on 3.6 and 3.7.
 
     + Image slicing now creates ImageRegions
     + Images are now displayed graphically in IPython Notebook
